spade-tests/src/snapshots/spade_tests__typeinference__late_method_fix_does_not_allow_missing_methods_to_sneak_through.snap
---
source: spade-tests/src/typeinference.rs
---
struct S {}
impl S {
    fn method(self) {}
}

fn test() {
    decl a;
    a.method();
    let a = true;
}


error: `bool` has no method `method`
  ┌─ testinput:8:7
  │
8 │     a.method();
  │     --^^^^^^--
  │     │ │
  │     │ No such method
  │     This has type `bool`
